--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,11 +1,263 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang ="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<title>Blog de Seba</title>  
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-  <h2>ajshdkjasd</h2>
+	<header>
+		<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+			<div class="container">
+				<div class= "navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navegacion-fm">
+						<span class="sr-only">Desplegar /Ocultar Menu</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				<a href="#"> <img class="img-fluid navbar-brand" src="img\logo.png">
+				</a>
+			</div>
+			<!-- Inicia Menu -->
+			<div class="collapse navbar-collapse" id="navegacion-fm">
+				<ul class="nav navbar-nav">
+				<li class="active"><a href="#">Inicio</a></li>
+				<li class="dropdown">
+					<a href="#" class="dropw-toggle" data-toggle="dropdown" role="button">
+						Hardware <span class="caret"></span>
+					</a>	
+					<ul class="dropdown-menu" role="menu">
+						<li><a href="#">PC</a></li>
+						<li class="divider"></li>
+						<li><a href="#">Notebook</a></li>
+						<li><a href="#">Accesorios</a></li>
+						<li><a href="#">Su cariño</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Contacto</a></li>
+				<li><a href="#">Ubicación</a></li>
+				<li><a href="#">Nosotros</a></li>
+				<li><a href="registro/registro.html">Registrate</a></li>
+				</ul>
+
+					<form action="" class="navbar-form navbar-right" role="search" >
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="buscar">
+						</div>
+						<button type="sumbit" class="btn btn-primary">
+							<span class="glyphicon glyphicon-search"></span>
+						</button>
+					</form>
+				</div>
+			</div>	
+		</nav>
+	</header>
+	<!--aqui va el hazlo bien  -->
+
+	<section class="jumbotron">
+
+		<div class="container">
+
+			<h1> Hazlo bien a la PRIMERA</h1>
+			<p> Ahorrate malos ratos con nosotros!</p>
+		</div>
+
+	</section>
+
+
+	<section class="main container">
+		<div class="row">
+			<section class="post col-md-9">
+				<div class="miga-de-pan">
+					<ol class="breadcrumb">
+						<li><a href="#">Inicio</a></li>
+						<li class="active">Noticias</li>
+					</ol>
+				</div>
+
+				<!--aqui va el ARTICULO 1  -->	
+
+				<article class="post clearfix">
+					<a href="#" class="thumb pull-left">
+						<img class="img-thumbnail" src="img\img 1.jpg" alt="">
+					</a>
+					<h2 class="post-tittle">
+						<a href="#">¿Por qué no comprar cualquier procesador?</a>
+					</h2>
+					<p><span class="post-fecha">14 de Septiembre de 2020</span> por <span class="post-autor"><a href="#">Elsa Capuntas</a></span></p>
+					<p class="post-contenido text-justify">
+						Es lo primero que debes tener en cuenta antes de decantarte por un procesador concreto, ya que no es lo mismo montar un PC que vas a utilizar para jugar a títulos actuales que uno dedicado a ofimática, a contenidos multimedia o a aplicaciones exigentes que puedan aprovechar un alto grado de paralelizado (muchos núcleos e hilos). Por eso hacemos énfasis en que pienses primero el uso que le darás a tu procesador y no malgastar. 
+					</p>
+
+					<div class="contenedor-botones">
+						<a href="#" class="btn btn-primary">Leer Más</a>
+						<a href="#" class="btn btn-success"> Comentarios <span class="badge">13</span></a>
+					</div>
+				</article>
+
+				<!--aqui va el ARTICULO 2  -->
+
+				<article class="post clearfix">
+					<a href="#" class="thumb pull-left">
+						<img class="img-thumbnail" src="img\img 2.jpg" alt="">
+					</a>
+					<h2 class="post-tittle">
+						<a href="#">Indies V/S Triple A</a>
+					</h2>
+					<p><span class="post-fecha">24 de Agosto de 2020</span> por <span class="post-autor"><a href="#">Sebastián Fernandez</a></span></p>
+					<p class="post-contenido text-justify">
+						Tanto es el exito de AMONG US y Fall Guys juegos indies con un dificil inicio, pero ahora en
+						pandemia han tenido un explosivo ingreso de usuarios, incluso muchos han comprado estos juego por ejemplo en Steam o la Store de PSN que sus ingresos se han visto sorpresivamente por las nubes. Ven con nosotros a descubrir por qué ocurre esto y descubrir que está ocurriendo con los video juegos de grandes estudios que ultimamente se han ganado el hate de la comunidad.
+					</p>
+
+					<div class="contenedor-botones">
+						<a href="#" class="btn btn-primary">Leer Más</a>
+						<a href="#" class="btn btn-success"> Comentarios <span class="badge">46</span></a>
+					</div>
+				</article>	
+
+				<!--aqui va el ARTICULO 3  -->
+
+				<article class="post clearfix">
+					<a href="#" class="thumb pull-left">
+						<img class="img-thumbnail" src="img\img 3.jpg" alt="">
+					</a>
+					<h2 class="post-tittle">
+						<a href="#">¿Podrá seguir el ritmo en la eterna lucha AMD vs Intel vs NVIDIA?</a>
+					</h2>
+					<p><span class="post-fecha">20 de Enero de 2020</span> por <span class="post-autor"><a href="#">El care e' Puta</a></span></p>
+					<p class="post-contenido text-justify">
+						Todo son alabanzas hacia AMD, una empresa mucho más pequeña que Intel y NVIDIA y que sin embargo les está poniendo las cosas difíciles a ambas en casi todos los segmentos del mercado. Pero si analizamos la situación, hay un cúmulo de adversidades que tiene que solventar Lisa Su para mantener el nivel.
+					</p>
+
+					<div class="contenedor-botones">
+						<a href="#" class="btn btn-primary">Leer Más</a>
+						<a href="#" class="btn btn-success"> Comentarios <span class="badge">85</span></a>
+					</div>
+				</article>	
+
+				<nav>
+					<div class="center-block">
+						<ul class="pagination">
+							<li class="disable"><a href="#">&laquo; <span class="sr-only">Anterior</span></a></li>
+							<li class="active"><a href="#">1</a></li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>		
+							<li><a href="#">4</a></li>
+							<li><a href="#">5</a></li>
+							<li><a href="#">&raquo; <span class="sr-only">Siguiente</span></a></li>
+						</ul>
+					</div>
+				</nav>	
+			</section>
+
+
+
+			<aside class="col-md-3 hidden-xs hidden-sm">
+				<h4>Categorias</h4>
+				<div class="list-group">
+					<a href="#" class="list-group-item active">Noticias</a>
+					<a href="#" class="list-group-item">Hardware</a>
+					<a href="#" class="list-group-item">Contacto</a>
+					<a href="#" class="list-group-item">Ubicacion</a>
+					<a href="#" class="list-group-item">Redes Sociales</a>
+				</div>
+
+				<h4>Articulos Recientes</h4>
+				<a href="#" class="list-group-item">
+					<h4 class="list-group-item-heading">Aprendiendo HTML5</h4>
+					<p class="list-group-item-text">Aprende como crear una pagina web con nuestra ayuda</p>
+				</a>
+
+				<a href="#" class="list-group-item">
+					<h4 class="list-group-item-heading">Trucos HTML5</h4>
+					<p class="list-group-item-text">Conoce los mejores trucos para tu pagina</p>
+				</a>
+
+				<a href="#" class="list-group-item">
+					<h4 class="list-group-item-heading">Experiencias HTML5</h4>
+					<p class="list-group-item-text">Beneficios de saber HTML5 y las experiencias de nuestros clientes</p>
+				</a>
+
+				
+
+			
+			</aside>
+		</div> 
+
+	</section>
+
+		
+
+	<footer>
+
+		<!--aqui va el CAROUSEL -->	
+
+			<div>
+				<section>
+						<div id="myCarousel" class="carousel slide" data-ride="carousel">
+								  <!-- Indicators -->
+								  <ol class="carousel-indicators">
+								    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+								    <li data-target="#myCarousel" data-slide-to="1"></li>
+								    <li data-target="#myCarousel" data-slide-to="2"></li>
+								  </ol>
+
+							  <!-- Wrapper for slides -->
+							  <center>
+							  <div class="carousel-inner">
+								    <div class="item active">
+								    	  <img src="img\carousel1.jpg" alt="" style="width: 10%" >
+								    </div>
+
+								    <div class="item">
+								     	 <img src="img\carousel2.jpg" alt="" style="width: 10%">
+								    </div>
+
+								    <div class="item">
+								     	 <img src="img\carousel3.jpg" alt="" style="width: 12%" >
+								    </div>
+							  </div>
+							  </center>
+							  <!-- Left and right controls -->
+							  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+								    <span class="glyphicon glyphicon-chevron-left"></span>
+								    <span class="sr-only">Previous</span>
+							  </a>
+							  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+								    <span class="glyphicon glyphicon-chevron-right"></span>
+								    <span class="sr-only">Next</span>
+							  </a>
+						</div>
+				</section>
+			</div>
+
+			<div class="container">
+				 <div class="row">
+				 	<div class="col-xs-6">
+				 		<p>Sebastian Fernandez - PoneloBien</p>
+				 	</div>
+				 	<div class="col-xs-6">
+				 		<ul class="list-inline text-right">
+				 			<li><a href="#">Inicio</a></li>
+				 			<li><a href="#">Cursos</a></li>
+				 			<li><a href="#">Contacto</a></li>
+				 			<li><a href="#">R.R.S.S.</a></li>
+				 			<li><a href="TerminosCondiciones/TerminosyCondiciones.html">Terms y Cond.</a></li>
+
+				 		</ul>
+				 	</div>
+				 </div>
+			</div>	
+
+	</footer>	
+
+	<script src="js/jquery.js"></script>
+	<script src="js/jquery-3.5.1.min.js"></script> 	
+	<script src="js/bootstrap.min.js"></script> 
 </body>
-</html>
+</html>	
